--- a/app/assets/stylesheets/group_setup.css.scss
+++ b/app/assets/stylesheets/group_setup.css.scss
@@ -2,21 +2,42 @@
 @import "mixins";
 
 #group-setup {
+  .presence-error-message, .date-error-message {
+    float: left;
+    top: 20px;
+  }
   #group_setup_group_description { height: 150px; }
   // the following two lines added to cope with a bootstrap tab bug
   // trimming off the start and end of the inputs
   .string, .text { width: 366px; }
   .radio { padding-left: 22px; }
 
-  #next, #finish {
+  #closing-inputs {
+    .control-group { display: inline-block; }
+    .validate-motion-close-date { width: 140px; }
+    #group_setup_close_at_time {
+      width: 100px;
+      margin-top: 10px; 
+    }
+  }
+  #group_setup_members_list { height: 50px; }
+  #invite-body {
+    width: 356px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+  }
+  #group_setup_invite_body {
+    height: 70px;
+    width: 342px;
+  }
+  #next, #send_invites {
     float: right;
     margin-left: 5px;
   }
   #wizard-tabs { min-height: 595px; }
-  #user-invitation {
-    .string, .text { width: 330px; }
-    #group_setup_members_list { height: 100px; }
-    padding: 15px;
-    border: 1px solid #BBB;
-  }
 }
+
+#finished { float: right; }
