--- a/app/views/motion_mailer/motion_blocked.html.haml
+++ b/app/views/motion_mailer/motion_blocked.html.haml
@@ -13,7 +13,7 @@
   = @motion.group.name
   / - if @motion.has_close_date?
   /   Closes in:
-  /   = time_ago_in_words(@motion.close_date + @motion.close_date.localtime.strftime('%a %d %b %Y, %I:%M%p, %Z'))
+  /   = time_ago_in_words(@motion.close_at + @motion.close_at.localtime.strftime('%a %d %b %Y, %I:%M%p, %Z'))
   %p
   - if @motion.description.present?
     Details:
