--- a/app/views/motions/_form.html.haml
+++ b/app/views/motions/_form.html.haml
@@ -11,16 +11,16 @@
       .span5
         #closing-inputs
           .control-group
-            = f.label :close_date, "Closing", {class: "control-label", for: "date-input", id: "close-date-label"}
-            = text_field_tag :input_date, nil, class: "date-input validate-motion-close-date inputError"
-            = select_hour(@input_time, ampm: true)
-            %span.date-error-message
-              ='Please give a future close date (The date you gave has past)'
+            .row
+              .span5
+                = f.input :close_at_date, as: :date_picker, label: 'Close date', input_html: { class: 'validate-motion-close-date' }
+                = f.input :close_at_time, as: :select, collection: populate_time_select, include_blank: false, label: false
+              .span3
+                %span.date-error-message Please give a future close date (The date you gave has past)
 
         #description
           = f.input :description, label: "Details", placeholder: "Give enough information so that anyone in your group can make a well-informed decision."
 
-        = f.input :close_date, as: :hidden
         = f.input :phase, as: :hidden, input_html: {value: "voting"}
         = f.input :facilitator_id, as: :hidden, input_html: {value: current_user.id}
         = f.input :discussion_id, as: :hidden, input_html: {value: @motion.discussion_id}
