--- a/app/views/group_setup/setup.html.haml
+++ b/app/views/group_setup/setup.html.haml
@@ -1,5 +1,5 @@
 .row
-  .span8#group-setup
+  .span9#group-setup
     = simple_form_for @group_setup, url: finish_group_path, method: :put do |f|
       %ul.nav.nav-tabs
         %li.disabled.active
@@ -16,43 +16,35 @@
             Invite your group
       .tab-content#wizard-tabs
         .tab-pane.active#group-tab
-          %h1 Set up your group
-          .control-group
-            .row
-              .span5
+          .row
+            .span9
+              %h1 Set up your group
+              .control-group
                 = f.input :group_name, input_html: { class: 'validate-presence' }
-              .span3
-                .presence-error-message Please fill in the group title
-          .control-group
-            .row
-              .span5
+                %span.inline-help Please fill in the group title
+              .control-group
                 = f.input :group_description, input_html: { class: 'validate-presence', :placeholder => "What is the purpose of your group?" }
-              .span3
-                .presence-error-message Please fill in the group description
+                %span.inline-help Please fill in the group description
+              %h2 Settings
           .row
             .span5
-              %h2 Settings
               %p Setting up an engaging discussion relevant to your group before inviting people in will dramatically increase the likelihood of your group succeeding in using Loomio long-term.
-          = f.input :viewable_by, :collection => {'Public - anyone with the link can see this group' => 'everyone', 'Members - only members of this group can see it' => 'members'}, :as => 'radio_buttons', :label => "Who can see this group?"
-          %br
-          = f.input :members_invitable_by, :label => "Who can invite members to this group?", :as => "radio_buttons", :collection => {'All group members' => 'members', 'Admins only' => 'admins'}
+              = f.input :viewable_by, :collection => {'Public - anyone with the link can see this group' => 'everyone', 'Members - only members of this group can see it' => 'members'}, :as => 'radio_buttons', :label => "Who can see this group?"
+              %br
+              = f.input :members_invitable_by, :label => "Who can invite members to this group?", :as => "radio_buttons", :collection => {'All group members' => 'members', 'Admins only' => 'admins'}
         .tab-pane#discussion-tab
           .row
             .span5
               %h1 Set up your first discussion
               %p Setting up an engaging discussion relevant to your group before inviting people in will dramatically increase the likelihood of your group succeeding in using Loomio long-term.
-          .control-group
-            .row
-              .span5
+          .row
+            .span9
+              .control-group
                 = f.input :discussion_title, input_html: { class: 'validate-presence', :placeholder => "What is the topic you would like to discuss?" }
-              .span3
-                .presence-error-message Please fill in the discussion title
-          .control-group
-            .row
-              .span5
+                %span.inline-help Please fill in the discussion title
+              .control-group
                 = f.input :discussion_description, input_html: { class: 'validate-presence', :placeholder => "Introduce the topic and give enough context for your group to have a well-informed discussion." }
-              .span3
-                .presence-error-message Please fill in the discussion description
+                %span.inline-help Please fill in the discussion description
         .tab-pane#motion-tab
           .row
             .span5
@@ -60,52 +52,36 @@
               %p Often you’d wait for the discussion to progress for a while before making a proposal for your group to decide on. For the first discussion however, it’s a good idea to have a proposal open for everyone to participate in.
               %p A good proposal contains a plan of action for the group. Make your proposal as clear and succinct as possible so people know exactly what it means when they agree or disagree.
               %p You can set up your first proposal here:
-          .control-group
-            .row
-              .span5
+          .row
+            .span9
+              .control-group
                 = f.input :motion_title, input_html: { class: 'validate-presence', :placeholder => "Make this as clear and succinct as possible." }
-              .span3
-                .presence-error-message Please fill in the motion title
-          .control-group
-            .row
-              .span5
+                %span.inline-help Please fill in the motion title
+              .control-group
                 = f.input :motion_description, input_html: { class: 'validate-presence', :placeholder => "Give enough information so that anyone in your group can make a well-informed decision." }
-              .span3
-                .presence-error-message Please fill in the motion description
-          .control-group#closing-inputs
-            .row
-              .span5
+                %span.inline-help Please fill in the motion description
+              .control-group#closing-inputs
                 = f.input :close_at_date, as: :date_picker, label: 'Close date', input_html: { class: 'validate-motion-close-date' }
                 = f.input :close_at_time, as: :select, collection: populate_time_select, include_blank: false, label: false
-                #time-zone
-                  = f.label :close_at_time_zone
-                  = f.time_zone_select :close_at_time_zone, label: "hi", id: 'group-setup-time-zone'
-              .span3
-                .date-error-message Please give a future close date (The date you gave has past)
+                = f.time_zone_select :close_at_time_zone, label: false, id: 'time-zone-select'
+                %span.inline-help Please give a future close date
         .tab-pane#invite-tab
-          %h1 Invite users
-          .control-group
-            .row
-              .span5
+          .row
+            .span9
+              %h1 Invite users
+              .control-group
                 = f.input :admin_email, input_html: { class: 'validate-presence', :value => current_user.email }
-              .span2
-                .presence-error-message Please fill in the an administrator email address
-          .control-group
-            .row
-              .span5
+                %span.inline-help Please fill in the an administrator email address
+              .control-group
                 = f.input :members_list, input_html: { class: 'validate-presence', placeholder: "User Name <user1@example.com>, user2@example.com" }
-              .span2
-                .presence-error-message Please fill in the email addresses of the invited user(s)
-          .control-group
-            .row
-              .span5
+                %span.inline-help Please fill in the invited email addresse(s)
+              .control-group
                 = f.input :invite_subject, input_html: { class: 'validate-presence', :value => "Your invitation to participate in the #{@group_setup.group_name} group on Loomio" }
-              .span2
-                .presence-error-message Please fill in the subject for the invite
-          .control-group
-            .row
-              .span5#invite-body
-                = f.input :invite_body, input_html: { class: 'validate-presence', value: "I've just set up our group to make decisions onine using a new tool called Loomio. It will help us get stuff done without having to meet in person or drown in emails." }
+                %span.inline-help Please fill in the subject for the invite
+          .row
+            .span5#invite-body
+              .control-group
+                = f.input :invite_body, value: "I've just set up our group to make decisions onine using a new tool called Loomio. It will help us get stuff done without having to meet in person or drown in emails."
                 %p Click the link below to accept the invitation:
                 %p [http://loomio.org/token]
                 %p Loomio is a tool for collaborative decisions-making. You can see more about how Loomio works here: http://loomio.org/how-it-works
@@ -118,8 +94,6 @@
                 %p Regards,
                 = @current_user.name
                 %p= @group_setup.group_name
-              .span2
-                .presence-error-message Please fill in the body of the email
       .row
         .span5
           = f.submit 'Send invites', class: 'btn btn-info btn-large', id: 'send_invites', :data => { :disable_with => "Send invites" }
