--- a/app/views/motions/_edit_close_date.html.haml
+++ b/app/views/motions/_edit_close_date.html.haml
@@ -3,14 +3,14 @@
     %button.close{"data-dismiss" => "modal"}×
     %h3= "Change the close date for the proposal '#{motion.name}'"
   = simple_form_for motion, :url => edit_close_date_motion_path(motion.id) do |f|
-    .modal-body#closing-inputs
-      .control-group
-        .row
-          .span5
+    .modal-body
+      .row
+        .span9
+          .control-group#closing-inputs
             = f.input :close_at_date, as: :date_picker, label: 'Close date', input_html: { class: 'validate-motion-close-date' }
             = f.input :close_at_time, as: :select, collection: populate_time_select, include_blank: false, label: false
-          .span3
-            .date-error-message Please give a future close date (The date you gave has past)
+            = f.time_zone_select :close_at_time_zone, id: 'time-zone-select', label: false
+            %span.inline-help Please give a future close date (The date you gave has past)
     .modal-footer
       = submit_tag "Change", class: "motion btn btn-info btn-large run-validations", id: 'change-close-date', :data => { :disable_with => "Change" }
       = link_to "Cancel", "#", "data-dismiss" => "modal", class: "btn btn-large"
