--- a/app/views/motions/_form.html.haml
+++ b/app/views/motions/_form.html.haml
@@ -6,18 +6,15 @@
         = f.input :name, label: "Title", id: "motion-name", :placeholder => "What is your proposed course of action?"
       .span5
         %p Make the title as clear and succinct as possible so people know exactly what it means when they agree or disagree with your proposal.
-
+    .row
+      .span9
+        .control-group#closing-inputs
+          = f.input :close_at_date, as: :date_picker, label: 'Close date', input_html: { class: 'validate-motion-close-date' }
+          = f.input :close_at_time, as: :select, collection: populate_time_select, include_blank: false, label: false
+          = f.time_zone_select :close_at_time_zone, id: 'time-zone-select', label: false
+          %span.inline-help Please give a future close date (The date you gave has past)
     .row
       .span5
-        #closing-inputs
-          .control-group
-            .row
-              .span5
-                = f.input :close_at_date, as: :date_picker, label: 'Close date', input_html: { class: 'validate-motion-close-date' }
-                = f.input :close_at_time, as: :select, collection: populate_time_select, include_blank: false, label: false
-              .span3
-                %span.date-error-message Please give a future close date (The date you gave has past)
-
         #description
           = f.input :description, label: "Details", placeholder: "Give enough information so that anyone in your group can make a well-informed decision."
 
