--- a/app/views/discussions/_graph_preview_pop_over_title.html.haml
+++ b/app/views/discussions/_graph_preview_pop_over_title.html.haml
@@ -1,6 +1,6 @@
 %span.popover-header-title
   =t :proposal
-%span{class: css_class_for_close_date(motion)}
+%span{class: css_class_for_close_at(motion)}
   - if motion.close_at
     = time_ago_in_words(motion.close_at) + t(:until_close)
 .popover-motion-name
