--- a/app/views/group_setup/setup.html.haml
+++ b/app/views/group_setup/setup.html.haml
@@ -60,10 +60,10 @@
               .control-group
                 = f.input :motion_description, input_html: { class: 'validate-presence', :placeholder => "Give enough information so that anyone in your group can make a well-informed decision." }
                 %span.inline-help Please fill in the motion description
-              .control-group#closing-inputs
-                = f.input :close_at_date, as: :date_picker, label: 'Close date', input_html: { class: 'validate-motion-close-date' }
-                = f.input :close_at_time, as: :select, collection: populate_time_select, include_blank: false, label: false
-                = f.time_zone_select :close_at_time_zone, label: false, id: 'time-zone-select'
+              .control-group.motion-closing-inputs
+                = f.input :close_at_date, as: :date_picker, label: 'Close date', input_html: { class: 'motion-close-at-date' }
+                = f.input :close_at_time, as: :select, collection: populate_time_select, include_blank: false, label: false, input_html: { class: 'motion-close-at-time' }
+                = f.time_zone_select :close_at_time_zone, nil, {}, { class: 'motion-close-at-time-zone', label: false }
                 %span.inline-help Please give a future close date
         .tab-pane#invite-tab
           .row
