--- a/app/views/motions/_edit_close_date.html.haml
+++ b/app/views/motions/_edit_close_date.html.haml
@@ -6,10 +6,10 @@
     .modal-body
       .row
         .span9
-          .control-group#closing-inputs
-            = f.input :close_at_date, as: :date_picker, label: 'Close date', input_html: { class: 'validate-motion-close-date' }
-            = f.input :close_at_time, as: :select, collection: populate_time_select, include_blank: false, label: false
-            = f.time_zone_select :close_at_time_zone, id: 'time-zone-select', label: false
+          .control-group.motion-closing-inputs
+            = f.input :close_at_date, as: :date_picker, label: 'Close date', input_html: { class: 'motion-close-at-date' }
+            = f.input :close_at_time, as: :select, collection: populate_time_select, include_blank: false, label: false,input_html: { class: 'motion-close-at-time' }
+            = f.time_zone_select :close_at_time_zone, nil, {}, { class: 'motion-close-at-time-zone', label: false }
             %span.inline-help= t(:proposal_close_date_error)
     .modal-footer
       = submit_tag t(:change), class: "motion btn btn-info btn-large run-validations", id: 'change-close-date', :data => { :disable_with => "Change" }
