--- a/app/views/motions/_form.html.haml
+++ b/app/views/motions/_form.html.haml
@@ -3,10 +3,10 @@
     %p= t "motion_form.name_helper"
     .row
       .span9
-        .control-group#closing-inputs
-          = f.input :close_at_date, as: :date_picker, label: t(:closing), input_html: { class: 'validate-motion-close-date' }
-          = f.input :close_at_time, as: :select, collection: populate_time_select, include_blank: false, label: false
-          = f.time_zone_select :close_at_time_zone, id: 'time-zone-select', label: false
+        .control-group.motion-closing-inputs
+          = f.input :close_at_date, as: :date_picker, label: t(:closing), input_html: { class: 'motion-close-at-date' }
+          = f.input :close_at_time, as: :select, collection: populate_time_select, include_blank: false, label: false,input_html: { class: 'motion-close-at-time' }
+          = f.time_zone_select :close_at_time_zone, nil, {}, { class: 'motion-close-at-time-zone', label: false }
           %span.inline-help= t(:proposal_close_date_error)
     .row
       .span5
