--- a/app/views/motions/_edit_close_date.html.haml
+++ b/app/views/motions/_edit_close_date.html.haml
@@ -9,7 +9,7 @@
           .control-group.motion-closing-inputs
             = f.input :close_at_date, as: :date_picker, label: 'Close date', input_html: { class: 'motion-close-at-date' }
             = f.input :close_at_time, as: :select, collection: populate_time_select, include_blank: false, label: false,input_html: { class: 'motion-close-at-time' }
-            = f.time_zone_select :close_at_time_zone, nil, {default: @user_time_zone}, class: 'motion-close-at-time-zone'
+            = f.time_zone_select :close_at_time_zone, nil, {default: time_zone}, class: 'motion-close-at-time-zone'
             %span.inline-help= t(:proposal_close_date_error)
     .modal-footer
       = submit_tag "Change", class: "motion btn btn-info btn-large run-validations", id: 'change-close-date', :data => { :disable_with => t(:changing) }
