--- a/app/views/groups/_members.html.haml
+++ b/app/views/groups/_members.html.haml
@@ -1,9 +1,26 @@
 - unless group.hide_members && (cannot? :edit, group)
   .sub-panel
-    .membership-count.label
-      = group.users.count
+    -if can?(:edit, group) or group.members_can_invite?
+      .dropdown.btn-group.group-options
+        %a.btn.btn-grey.dropdown-toggle#group-member-options{ href: "#", 'data-toggle' => 'dropdown' }
+          = t(:options)
+          = image_tag("dropdown.png", :title => t(:options), :alt => t(:options), class: "options-dropdown-icon")
+        %ul.dropdown-menu.pull-right
+          -if can? :add_members, group
+            -if group.is_top_level?
+              %li=link_to 'Invite people', new_group_invitation_path(group)
+              %li=link_to 'Pending invitations', group_invitations_path(group)
+            -else
+              %li=link_to t(:add_new_member), '#invite-subgroup-members', :id => 'group-add-members', 'data-toggle' => 'modal'
+          -if can? :edit, group
+            %li=link_to 'Edit memberships', group_memberships_path(group)
+          - if can? :email_members, group
+            %li= link_to t(:email_group_members), "#email-members-modal", "data-toggle" => "modal"
+        -if group.is_sub_group?
+          #invite-subgroup-members.modal.hidden
+            = render 'subgroup_add_members', group: group
     %h4= t :members
-    = render 'add_members', group: group
+
     %ul#users-list
       - group.users.each do |user|
         = render 'membership', user: user, group: group
