--- a/app/views/groups/group_setup/setup.html.haml
+++ b/app/views/groups/group_setup/setup.html.haml
@@ -18,17 +18,17 @@
         .tab-pane.active#group-tab
           .row
             .span9
-              %h1 Set up your group
+              %h1= t("group_header")
               .control-group
                 = f.input :group_name, input_html: { class: 'validate-presence' }
-                %span.inline-help Please fill in the group title
+                %span.inline-help= t("group_name_error")
               .control-group
-                = f.input :group_description, input_html: { class: 'validate-presence', :placeholder => "What is the purpose of your group?" }
-                %span.inline-help Please fill in the group description
-              %h2 Settings
+                = f.input :group_description, input_html: { class: 'validate-presence' }
+                %span.inline-help= t("group_description_error")
+              %h2= t("group_settings_header")
           .row
             .span5
-              %p Setting up an engaging discussion relevant to your group before inviting people in will dramatically increase the likelihood of your group succeeding in using Loomio long-term.
+              %p= t("group_settings_blurb")
               = f.input :viewable_by, :collection => {'Public - anyone with the link can see this group' => 'everyone', 'Members - only members of this group can see it' => 'members'}, :as => 'radio_buttons', :label => "Who can see this group?"
               %br
               = f.input :members_invitable_by, :label => "Who can invite members to this group?", :as => "radio_buttons", :collection => {'All group members' => 'members', 'Admins only' => 'admins'}
@@ -40,10 +40,10 @@
           .row
             .span9
               .control-group
-                = f.input :discussion_title, input_html: { class: 'validate-presence', :placeholder => "What is the topic you would like to discuss?" }
+                = f.input :discussion_title, input_html: { class: 'validate-presence' }
                 %span.inline-help Please fill in the discussion title
               .control-group
-                = f.input :discussion_description, input_html: { class: 'validate-presence', :placeholder => "Introduce the topic and give enough context for your group to have a well-informed discussion." }
+                = f.input :discussion_description, input_html: { class: 'validate-presence' }
                 %span.inline-help Please fill in the discussion description
         .tab-pane#motion-tab
           .row
@@ -55,10 +55,10 @@
           .row
             .span9
               .control-group
-                = f.input :motion_title, input_html: { class: 'validate-presence', :placeholder => "Make this as clear and succinct as possible." }
+                = f.input :motion_title, input_html: { class: 'validate-presence' }
                 %span.inline-help Please fill in the motion title
               .control-group
-                = f.input :motion_description, input_html: { class: 'validate-presence', :placeholder => "Give enough information so that anyone in your group can make a well-informed decision." }
+                = f.input :motion_description, input_html: { class: 'validate-presence' }
                 %span.inline-help Please fill in the motion description
               .control-group.motion-closing-inputs
                 = f.input :close_at_date, as: :date_picker, label: 'Close date', input_html: { class: 'motion-close-at-date' }
@@ -73,27 +73,15 @@
                 = f.input :admin_email, input_html: { class: 'validate-presence', :value => current_user.email }
                 %span.inline-help Please fill in the an administrator email address
               .control-group
-                = f.input :members_list, input_html: { class: 'validate-presence', placeholder: "User Name <user1@example.com>, user2@example.com" }
+                = f.input :members_list, input_html: { class: 'validate-presence' }
                 %span.inline-help Please fill in the invited email addresse(s)
+              = f.input :invite_subject, input_html: { class: 'validate-presence', :value => t("invitation_to_join_group.subject", group: @group_setup.group_name), disabled: true }
               .control-group
-                = f.input :invite_subject, input_html: { class: 'validate-presence', :value => "Your invitation to participate in the #{@group_setup.group_name} group on Loomio" }
-                %span.inline-help Please fill in the subject for the invite
+                = f.input :invite_body, input_html: { class: 'validate-presence', value: "I've just set up our group to make decisions onine using a new tool called Loomio. It will help us get stuff done without having to meet in person or drown in emails." }
+                %span.inline-help Please fill in the invite body
           .row
             .span5#invite-body
-              .control-group
-                = f.input :invite_body, value: "I've just set up our group to make decisions onine using a new tool called Loomio. It will help us get stuff done without having to meet in person or drown in emails."
-                %p Click the link below to accept the invitation:
-                %p [http://loomio.org/token]
-                %p Loomio is a tool for collaborative decisions-making. You can see more about how Loomio works here: http://loomio.org/how-it-works
-                %p To get started, I've opened up a new decision:
-                = @group_setup.motion_title
-                = @group_setup.motion_description
-
-                %p Click the invitation link above to sign in and have your say!
-                %br
-                %p Regards,
-                = @current_user.name
-                %p= @group_setup.group_name
+              %p= t("invitation_to_join_group.uneditable_body", invite_link: "[invite link here]", user_name: @current_user, group_name: @group_setup.group_name)
       .row
         .span5
           = f.submit 'Send invites', class: 'btn btn-info btn-large', id: 'send_invites', :data => { :disable_with => "Send invites" }
